--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 
 <body>
-   <script>
-   </script>
+    <div id="quiz">
+    </div>
+    <div class="imagem">
+        <img id="naruto" src="naruto.png" alt="">
+        <img id="piece" src="one piece.png" alt="">
+        <img id="slayer" src="demon-slayer.png" alt="">
+        <img id="jujutsu" src="jujutsu.png" alt="">
+        <img id="dragon" src="dragon-ball.png" alt="">
+    </div>
+    <script src="Script.js"></script>
 </body>
 
 </html>
