--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div id="quiz">
     </div>
     <div class="imagem">
-        <img id="naruto" src="naruto.png" alt="">
-        <img id="piece" src="one piece.png" alt="">
-        <img id="slayer" src="demon-slayer.png" alt="">
-        <img id="jujutsu" src="jujutsu.png" alt="">
-        <img id="dragon" src="dragon-ball.png" alt="">
+        <img id="naruto" src="PersonagemNaruto.png" alt="">
+        <img id="piece" src="PersonagemLuffy.png" alt="">
+        <img id="slayer" src="PersonagemDemonSlayer.png" alt="">
+        <img id="jujutsu" src="PersonagemJujutsu.png" alt="">
+        <img id="dragon" src="PersonagemDragonBall.png" alt="">
     </div>
     <script src="Script.js"></script>
 </body>
