--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div id="quiz">
     </div>
 
-    <div class="green"></div>
-    <div class="orange"></div>
-    <div class="red"></div>
+    <div class="green" data-tooltip="Nivel fácil"></div>
+    <div class="orange" data-tooltip="Nivel médio"></div>
+    <div class="red" data-tooltip="Nivel difícil"></div>
     <div class="imagem">
         <img id="naruto" src="./imagens/PersonagemNaruto.png" alt="">
         <img id="piece" src="./imagens/PersonagemLuffy.png" alt="">
@@ -25,6 +25,9 @@
         <img id="jujutsu" src="./imagens/PersonagemJujutsu.png" alt="">
         <img id="dragon" src="./imagens/PersonagemDragonBall.png" alt="">
     </div>
+
+    <div class="tooltip" id="tooltip"></div>
+
     <script src="Script.js"></script>
 </body>
 
