--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ</title>
@@ -14,8 +12,9 @@
 </head>
 
 <body>
-    <div id="quiz">
-    </div>
+    <div id="quiz"></div>
+    <div class="tooltip" id="tooltip"></div>
+
 
     <div class="imagem">
         <img id="naruto" src="./imagens/PersonagemNaruto.png" alt="">
@@ -23,6 +22,12 @@
         <img id="slayer" src="./imagens/PersonagemDemonSlayer.png" alt="">
         <img id="jujutsu" src="./imagens/PersonagemJujutsu.png" alt="">
         <img id="dragon" src="./imagens/PersonagemDragonBall.png" alt="">
+    </div>
+
+   <div class="personagens_Fases">
+        <img id="muzan" src="./imagens/facil.png">
+        <img id="kaidou" src="./imagens/medio-removebg-preview.png">
+        <img id="sakuna" src="./imagens/dificil-removebg-preview.png">
     </div>
 
     <script src="Script.js"></script>
