--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
 </head>
 
 <body>
+    <!-- <div class="personagem-container" id="muzan-container">
+        <div class="faixa" id="faixa"></div>
+        <img id="muzan" src="./imagens/facil.png" alt="Muzan">
+    </div>  -->
+    <!--<div class="personagem-container" id="kaidou-container"></div>
+        <div class="faixa_kaidou" id="faixa"></div>
+        <img id="kaidou" src="./imagens/medio-removebg-preview.png">
+    </div> -->
+    <!-- <div class="personagem-container" id="sakuna-container"></div>
+        <div class="faixa_sakuna" id="faixa"></div>
+        <img id="sakuna" src="./imagens/dificil-removebg-preview.png">
+    </div>  -->
     <div id="quiz"></div>
-    <div class="tooltip" id="tooltip"></div>
+    <div class="tooltip" id="tooltip" ></div>
 
 
     <div class="imagem">
@@ -22,12 +34,6 @@
         <img id="slayer" src="./imagens/PersonagemDemonSlayer.png" alt="">
         <img id="jujutsu" src="./imagens/PersonagemJujutsu.png" alt="">
         <img id="dragon" src="./imagens/PersonagemDragonBall.png" alt="">
-    </div>
-
-   <div class="personagens_Fases">
-        <img id="muzan" src="./imagens/facil.png">
-        <img id="kaidou" src="./imagens/medio-removebg-preview.png">
-        <img id="sakuna" src="./imagens/dificil-removebg-preview.png">
     </div>
 
     <script src="Script.js"></script>
