--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <!-- <div class="personagem-container" id="muzan-container">
+    <div class="personagem-container" id="muzan-container">
         <div class="faixa" id="faixa"></div>
         <img id="muzan" src="./imagens/facil.png" alt="Muzan">
-    </div>  -->
+    </div>
     <!--<div class="personagem-container" id="kaidou-container"></div>
         <div class="faixa_kaidou" id="faixa"></div>
         <img id="kaidou" src="./imagens/medio-removebg-preview.png">
